--- a/src/frames/populate.html
+++ b/src/frames/populate.html
@@ -123,6 +123,21 @@
           indicatorEl.parentElement.removeChild(indicatorEl);
         }
       });
+
+      ipcRenderer.on("change-typ-speed", (event, arg) => {
+        if (tw1 !== null) {
+          tw1.options.delay = arg;
+        }
+        if (tw2 !== null) {
+          tw2.options.delay = arg;
+        }
+        if (tw3 !== null) {
+          tw3.options.delay = arg;
+        }
+        if (tw4 !== null) {
+          tw4.options.delay = arg;
+        }
+      });
       // ipcRenderer.on("clear-tw", (event, arg) => {
       //   tw1.stop().deleteAll(2000).start();
       //   tw2.stop().deleteAll(2000).start();
