--- a/src/frames/populate.html
+++ b/src/frames/populate.html
@@ -31,7 +31,7 @@
       });
       resizeObserver.observe(document.body);
 
-      ipcRenderer.on("change-tw1", (event, arg, arg1 = "natural") => {
+      ipcRenderer.once("change-tw1", (event, arg, arg1 = "natural") => {
         tw1 = null;
         console.log(arg1 + " " + Array.isArray(arg1));
         tw1 = new Typewriter(h1El, {
@@ -54,7 +54,7 @@
           })
           .start();
       });
-      ipcRenderer.on("change-tw2", (event, arg, arg1 = "natural") => {
+      ipcRenderer.once("change-tw2", (event, arg, arg1 = "natural") => {
         tw2 = null;
         tw2 = new Typewriter(introEl, {
           loop: false,
@@ -75,7 +75,7 @@
           })
           .start();
       });
-      ipcRenderer.on("change-tw3", (event, arg, arg1 = "natural") => {
+      ipcRenderer.once("change-tw3", (event, arg, arg1 = "natural") => {
         tw3 = null;
         tw3 = new Typewriter(genEl, {
           loop: false,
@@ -96,7 +96,7 @@
           })
           .start();
       });
-      ipcRenderer.on("change-tw4", (event, arg, arg1 = "natural") => {
+      ipcRenderer.once("change-tw4", (event, arg, arg1 = "natural") => {
         tw4 = null;
         tw4 = new Typewriter(outroEl, {
           loop: false,
@@ -177,6 +177,14 @@
         if (tw4 !== null) {
           tw4.options.delay = arg;
         }
+      });
+
+      ipcRenderer.on("nullify-typ", (event, arg) => {
+        tw1 = null;
+        tw2 = null;
+        tw3 = null;
+        tw4 = null;
+        tw5 = null;
       });
       // ipcRenderer.on("clear-tw", (event, arg) => {
       //   tw1.stop().deleteAll(2000).start();
