--- a/src/licensesplash.html
+++ b/src/licensesplash.html
@@ -7,10 +7,11 @@
   </head>
   <body>
     <div class="instructions">
-      <span>
+      <!-- <span>
         Click anywhere to close. Alternatively, press Q or Esc key on your
         keyboard.
-      </span>
+      </span> -->
+      <span> Click anywhere to close. </span>
     </div>
 
     <div class="license-container">
@@ -2867,8 +2868,8 @@ See the License for the specific language governing permissions and
 limitations under the License.
 </code></pre>
     </div>
+    <script src="./js/licenseSplash.js"></script>
   </body>
-  <script src="js/licenseSplash.js"></script>
   <!-- <script>
     const audioContext = new AudioContext();
     audioContext.crossOrigin = "anonymous";
